--- a/package.json
+++ b/package.json
@@ -9,15 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-<<<<<<< HEAD
     "@prisma/client": "^5.18.0",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "mongoose": "^8.5.4",
     "next": "^14.2.5",
-=======
-    "next": "^14.2.6",
->>>>>>> a6e70a0ae9f39cce577afa588b2a0aeb9a8c01e3
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18"
