--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "mongoose": "^8.5.4",
     "next": "^14.2.6",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "swiper": "^11.1.10"
   },
   "devDependencies": {
     "@types/node": "^20",
