--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "csv-parse": "^5.5.6",
+    "csv-parser": "^3.0.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.4",
     "next": "^14.2.6",
